# parseltongue-fe-mcp

./: .gitignore  Cargo.toml  README.md  server.json
.github/workflows/: ci.yml  release.yml
ast-surgeon/: Cargo.toml  test-wasm.mjs
ast-surgeon/crates/ast-surgeon-core/: Cargo.toml
ast-surgeon/crates/ast-surgeon-core/src/: edit.rs  format.rs  lib.rs  validate.rs
ast-surgeon/crates/ast-surgeon-core/src/operations/: extract.rs  imports.rs  make_async.rs  mod.rs  rename_symbol.rs  signature.rs  update_paths.rs  wrap.rs
ast-surgeon/crates/ast-surgeon-lang/: Cargo.toml
ast-surgeon/crates/ast-surgeon-lang/src/: lib.rs  registry.rs  typescript.rs
ast-surgeon/crates/ast-surgeon-wasm/: Cargo.toml
ast-surgeon/crates/ast-surgeon-wasm/src/: lib.rs  protocol.rs
ast-surgeon/scripts/: setup-wasm.sh
crates/fe-batch/: Cargo.toml
crates/fe-batch/src/: edit_set.rs  error.rs  file_ops.rs  lib.rs  staging.rs  transaction.rs  types.rs
crates/fe-batch/tests/: integration_basic.rs  integration_rollback.rs  property_tests.rs
crates/fe-common/: Cargo.toml
crates/fe-common/src/: fs_utils.rs  git.rs  lib.rs  project.rs
crates/fe-mcp-server/: Cargo.toml
crates/fe-mcp-server/src/: main.rs  mcp.rs  server.rs
crates/fe-mcp-server/src/tools/: batch.rs  mod.rs  surgeon.rs  verify.rs
crates/fe-verify/: Cargo.toml
crates/fe-verify/src/: detection.rs  error.rs  lib.rs  pipeline.rs  types.rs
crates/fe-verify/src/parsers/: eslint.rs  jest.rs  mod.rs  typescript.rs  vitest.rs
crates/fe-verify/src/runners/: biome.rs  eslint.rs  jest.rs  mod.rs  typescript.rs  vitest.rs
docs/: 09-competitive-landscape.md  09-integration-and-gtm.md  10-architecture-incremental-mcp.md
plans/: crystalline-jumping-hearth.md  crystalline-waddling-clock.md  ethereal-bubbling-raven.md  joyful-napping-waffle.md  smooth-foraging-cookie.md  snuggly-brewing-key.md  structured-humming-pillow.md  zippy-whistling-catmull.md  zoom-and-connections-plan.md
