[workspace]
resolver = "2"
members = [
    "crates/fe-mcp-server",
    "crates/fe-batch",
    "crates/fe-verify",
    "crates/fe-common",
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
tempfile = "3"
tracing = "0.1"
tracing-subscriber = "0.3"
