[workspace]
resolver = "2"
members = [
    "crates/fe-mcp-server",
    "crates/fe-batch",
    "crates/fe-verify",
    "crates/fe-common",
    "ast-surgeon/crates/ast-surgeon-core",
    "ast-surgeon/crates/ast-surgeon-lang",
]
# Note: ast-surgeon-wasm is excluded (needs wasm-pack, separate build)

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
tempfile = "3"
tracing = "0.1"
tracing-subscriber = "0.3"
tree-sitter = "0.24"
