[workspace]
members = [
    "crates/ast-surgeon-core",
    "crates/ast-surgeon-lang",
    "crates/ast-surgeon-wasm",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
tree-sitter = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
