[package]
name = "fe-batch"
version = "0.1.0"
edition = "2021"

[dependencies]
fe-common = { path = "../fe-common" }
fe-verify = { path = "../fe-verify" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tempfile = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = "1"
tempfile = { workspace = true }
tokio = { workspace = true }
