[package]
name = "fe-tools"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fe-tools"
path = "src/main.rs"

[dependencies]
fe-batch = { path = "../fe-batch" }
fe-verify = { path = "../fe-verify" }
fe-common = { path = "../fe-common" }
ast-surgeon-core = { path = "../../ast-surgeon/crates/ast-surgeon-core" }
ast-surgeon-lang = { path = "../../ast-surgeon/crates/ast-surgeon-lang" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tree-sitter = { workspace = true }
clap = { version = "4", features = ["derive"] }
async-trait = "0.1"
