[package]
name = "ast-surgeon-wasm"
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ast-surgeon-core = { path = "../ast-surgeon-core" }
ast-surgeon-lang = { path = "../ast-surgeon-lang" }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
console_error_panic_hook = "0.1"
